# test

./: CMakeLists.txt
assets/: IMG_5479.jfif
src/: App.cpp  App.h  TileImageProvider.cpp  TileImageProvider.h  main.cpp
src/model/: CardModel.cpp  CardModel.h  PlayerModel.cpp  PlayerModel.h  RoomModel.cpp  RoomModel.h
src/player/: Defect.cpp  Defect.h  Paladin.cpp  Paladin.h  Player.cpp  Player.h  Silent.cpp  Silent.h  Watcher.cpp  Watcher.h
src/qml/: Main.qml  scenes.qrc
src/qml/scenes/: ChoosePlayerScene.qml
